--- a/senguo.cc/admin/templates/admin/user-manage.html
+++ b/senguo.cc/admin/templates/admin/user-manage.html
@@ -4,15 +4,15 @@
 {% block content %}
 <span class="right-title">用户管理</span>
 <div class="subnav-box clearfix">
-    <ul class="subnav pull-left">
-        <li class="all_user">
-            <a href="{{reverse_url('adminStaffFollower')}}?action=all&&order_by=time&&page=0">所有用户</a>
+    <ul class="subnav pull-left user-type">
+        <li class="all_user active"  data-url="all">
+            <a href="javascript:;">所有用户</a>
         </li>
-        <li class="old_user">
-            <a href="{{reverse_url('adminStaffFollower')}}?action=old&&order_by=time&&page=0">老用户</a>
+        <li class="old_user" data-url="old">
+            <a href="javascript:;">老用户</a>
         </li>
-        <li class="charge_user">
-            <a href="{{reverse_url('adminStaffFollower')}}?action=charge&&order_by=time&&page=0">充值用户</a>
+        <li class="charge_user" data-url="charge">
+            <a href="javascript:;">充值用户</a>
         </li>
     </ul>
     <div class="search-input input-group pull-right">
@@ -20,9 +20,9 @@
         <input type="submit" value="用户搜索" class="search-btn form-control"/>
     </div>
 </div>
-{% if len(customers) != 0%}
+
 <div class="users-list-action clearfix bg-grey2 mt10">
-    <span class="pull-left move font14">用户数 ({{count}})</span>
+    <span class="pull-left move font14">用户数 (<span class="user-count"></span>)</span>
     <li class="pull-right set-right10"> 
         <div class="tit cate-title ml20">降序/升序：</div>
         <div class="dropdown slide-down-select w130">
@@ -52,53 +52,18 @@
     </li>
 </div>
 <ul class="users-list clearfix">
-    {% import time %}
-    {% for customer in customers %}
-    <li class="users-list-item  clearfix" data-id="{{customer.accountinfo.id}}">
-        <div class="show-info set-w100-fle">
-            <img class="user-img pull-left" src="{{customer.accountinfo.headimgurl_small or '/static/images/TDSG.png'}}"/>
-            <div class="user-info pull-left">
-                <span class="user-name set-inl-blo">{{customer.accountinfo.nickname}}<i class="user-sex pull-right set-inl-blo" data-id="{{customer.accountinfo.sex}}"></i></span>
-                <div class="user-info-con">
-                    <span class="user-account text-grey2">{{customer.shop_balance}} 元</span>
-                    <span class="ml10">用户积分：{{customer.shop_point}}</span>
-                    <span class="ml10">用户ID：{{customer.accountinfo.id}}</span>
-                    <!--<span class="user-level text-white text-center">Lv3</span>
-                    <span class="level-price text-grey2">566</span>-->
-                </div>
-                <span class="remark text-pink mt10 {% if customer.remark ==None %}hidden{% end %}">备注：{{customer.remark}}</span>
-            </div>
-            <a href="javascript:;" class="remark-btn pull-right forbid_click ml10 history-order">添加备注</a>
-            <a href="{{reverse_url('adminSearchOrder')}}?action=customer_order&&id={{customer.id}}" class="history-order pull-right forbid_click ml10" target="_blank" >查看历史订单</a>
-        </div>
-        <div class="hide-info set-w100-fle bg-white" style="display:none;">
-            <div class="personal-info pull-left">
-                <p class="text-grey9">个人信息</p>
-                <p>姓名：{{customer.accountinfo.realname or '无'}}</p>
-                <p>手机：{{customer.accountinfo.phone or '无'}}</p>
-                <p>生日：{% if customer.accountinfo.birthday %}{{datetime.datetime.fromtimestamp(customer.accountinfo.birthday).strftime('%Y-%m-%d')}}{% else %}无{% end %}</p>
-            </div>
-            <div class="focus-shop pull-left">
-                <p class="text-grey9">关注的店铺</p>
-                <ul class="focus-shop-list">
-                    {% for name in customer.shop_names %}
-                    <li class="text-center bg-grey3 pull-left">{{name}}</li>
-                    {% end %}
-                </ul>
-                <span class="send-address bg-grey2 text-grey2">送货地址</span>
-                <ul class="address-list">
-                    {% for address in customer.addresses %}
-                    <li class="set-w100-fle">
-                        <p class="address">{{address.address_text}}-{{address.receiver}}</p>
-                        <p class="phone">电话：{{address.phone}}</p>
-                    </li>
-                   {% end %}
-                </ul>
-            </div>
-        </div>
-    </li>
-    {% end %}
+
 </ul>
+<div class="wrap-loading-box hidden">
+    <div class="loading-box">
+        <div class="loader">
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+        </div>
+        <div class="load-txt">加载中...</div>
+    </div>
+</div>
 <div class="modal fade remark-box" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content bg-white">
@@ -119,15 +84,15 @@
     <ul>
         <li><a href="javascript:;" class="page-btn pre-page">&nbsp;</a></li>
         <li>
-            <span class="page-now"></span>/<span class="page-total">{{page_sum}}</span>
+            <span class="page-now">1</span>/<span class="page-total"></span>
         </li>
         <li><a href="javascript:;" class="page-btn next-page">&nbsp;</a></li>
         <li><input class="input-page form-control" type="text" placeholder="输入页码"/></li>
         <li><a href="javascript:;" class="jump-to">跳转</a></li>
     </ul>
 </div>
-{% else %}
-<h4 class="text-center mt40">没有找到用户信息</h4>
-{% end %}
+
+<h4 class="text-center mt40 hidden notice">没有找到用户信息</h4>
+
 {% end %}
 {% block bottom %}<script src="{{static_url('js/admin-user.js')}}"></script>{% end %}
