madmin change tpl2

--- a/senguo.cc/admin/templates/bingo/home.html
+++ b/senguo.cc/admin/templates/bingo/home.html
@@ -97,7 +97,7 @@
 <ul class="hidden" id="goods_item">
     <li class="goods_item_item">
         <div class="goods-img-box">
-            <img class="goods_img" src="" alt="水果图片"/>
+            <img class="goods_img lazy_img" src="/static/images/holder_fruit.jpg" alt="水果图片" data-original=""/>
             <div class="status-tip"></div>
         </div>
         <div class="goods-attr-box">
