--- a/senguo.cc/admin/templates/m-admin/shop-set-template.html
+++ b/senguo.cc/admin/templates/m-admin/shop-set-template.html
@@ -37,6 +37,19 @@
                 <span class="use-btn"><span class="used">已</span>启用</span>
             </div>
         </li>
+        <li class="{% if shop_tpl==2 %}active{% end %}" data-id="2">
+            <div class="wrap-tpl-img">
+                <img src="/static/images/tpl-2.png" alt="商城模版一"/>
+                <div class="tpl-img-info">
+                    <p class="">森果商城模板三</p>
+                    <p class="mt4 f12">大图，美观，对上传的图片要求比较高。<br><span class="dgreen">(建议上传的商品图片宽高比例为5:3，若图片宽度为800像素，则高度应为480像素)</span></p>
+                </div>
+            </div>
+            <div class="wrap-tpl-btns">
+                <span class="preview-btn">预览</span>
+                <span class="use-btn"><span class="used">已</span>启用</span>
+            </div>
+        </li>
     </ul>
 </div>
 {% end %}
