--- a/senguo.cc/admin/templates/m-admin/shop-set-template.html
+++ b/senguo.cc/admin/templates/m-admin/shop-set-template.html
@@ -55,7 +55,9 @@
 {% end %}
 {% block fix %}
 <div class="pop-bwin pop-tpl hide">
-    <img class="tpl-big-img" src="/static/images/tpl-0.png" alt="森果模版"/>
+    <div class="tpl-phone-img">
+        <img class="tpl-big-img" src="/static/images/tpl-0.png" alt="森果模版"/>
+    </div>
     <a href="javascript:;" class="close-pop close-tpl" id="close-pop"></a>
 </div>
 {% end %}
