--- a/senguo.cc/admin/templates/admin/market-base.html
+++ b/senguo.cc/admin/templates/admin/market-base.html
@@ -8,23 +8,27 @@
 {% set subpage2 = context.get("subpage2") %}
 {% set love_wall_active = '' %}
 {% set coupon_active = '' %}
+{% set seckill_active='' %}
 
 {% if subpage2 == 'love_wall'%}
 	{% set love_wall_active = 'active' %}
-{% else %}
+{% elif  subpage2 == 'coupon'%}
 	{% set coupon_active = 'active' %}
+{% elif subpage2=='seckill' %}
+	{% set seckill_active='active' %}
 {% end %}
 {% set shop_code = current_shop.shop_code %}
 <span class="right-title">营销和玩法</span>
 <div class="subnav-box">
 <ul class="subnav  group">
     <li class="{{love_wall_active}}" id="infoSet"><a href="{{reverse_url('adminMarketing')}}?action=lovewall">告白墙</a></li>
-    <li class="{{coupon_active}}" id="coupon"><a href="{{reverse_url('adminMarketing')}}?action=coupon&coupon_type=0"><b class="red-toll1" id="is_balance"></b>优惠券</a></li>
+    <li class="{{coupon_active}}" id="coupon"><a href="{{reverse_url('adminMarketing')}}?action=coupon&coupon_type=0"><b class="" id="is_balance"></b>优惠券</a></li>
+    <li class="{{seckill_active}}" id="seckill"><a href="{{reverse_url('adminMarketing')}}?action=seckill&page=0"><b id="is_active"></b>商品秒杀</a></li>
     <!-- <li class="{{no_auth}}" id="noticeSet"><a href="#">商品预售</a></li> -->
-    <!-- <li class="{{no_auth}}" id="receiptSet"><a href="#">商品秒杀</a></li> -->
 </ul>
 </div>
 {% block setcontent %}{% end %}
+{% block seckill %}  {% end %}
 {% end %}
 {% block bottom %}
 {% end %}
