--- a/senguo.cc/admin/templates/admin/seckill.html
+++ b/senguo.cc/admin/templates/admin/seckill.html
@@ -10,7 +10,7 @@
                              <p class="mt20"><a href="/bbs/detail/88" target="_blank" class="font14">点击查看使用教程</a></p>
                </div>  
                <div class="col-sm-3 col-md-3">
-                             <a class="mode  pull-right mt10 confess-only" data-flag="on" title="点击切换状态" data-status="{{current_shop.marketing.confess_only}}"><span class="tit">已启用</span><span class="circle"></span></a>
+                             <a class="mode  pull-right mt10 open-switch" data-flag="on" title="点击切换状态" data-status="1"><span class="tit">已启用</span><span class="circle"></span></a>
                </div>
 </div>
 
@@ -72,5 +72,5 @@
 {% end %}
 
 {% block bottom %}
-<script src="{{static_url('js/admin-marketing.js')}}"></script>
+<script src="{{static_url('js/admin-marketing-seckill.js')}}"></script>
 {% end %}
