--- a/senguo.cc/admin/templates/bingo/home.html
+++ b/senguo.cc/admin/templates/bingo/home.html
@@ -107,9 +107,9 @@
             </div>
             <div class="attr-right">
                 <div class="wrap-operate">
-                    <a href="javascript:;" class="roll-btn minus-gds number-minus hidden">-</a>
-                    <a href="javascript:;" class="roll-btn add-gds number-plus hidden">+</a>
-                    <a href="javascript:;" class="roll-btn buy-gds to-add add_cart_num">买</a>
+                    <span href="javascript:;" class="roll-btn minus-gds number-minus hidden">-</span>
+                    <span href="javascript:;" class="roll-btn add-gds number-plus hidden">+</span>
+                    <span href="javascript:;" class="roll-btn buy-gds to-add add_cart_num">买</span>
                 </div>
                 <div class="wrap-src-price">
                     <p class="src-price"><span class="f12 rmb">￥</span><span class="src-price-num"></span></p>
