--- a/senguo.cc/admin/templates/bingo/home.html
+++ b/senguo.cc/admin/templates/bingo/home.html
@@ -98,6 +98,7 @@
     <li class="goods_item_item">
         <div class="goods-img-box">
             <img class="goods_img lazy_img" src="/static/images/holder_fruit.jpg" alt="水果图片" data-original=""/>
+            <div class="goods-img-hover"></div>
             <div class="status-tip"></div>
         </div>
         <div class="goods-attr-box">
