--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -158,7 +158,7 @@
 .a8{color: #a8a8a8;}
 .e4{color: #ee413e;}
 .rmb{position: relative;display: inline-block;top: -6px;}
-.wrap-operate{position: absolute;bottom: 36px;right: 4px;width: 60px;}
+.wrap-operate{position: absolute;bottom: 36px;right: 4px;width: 60px;z-index:20}
 .wrap-operate>.roll-btn{display: inline-block;width: 60px;height: 60px;margin-top:10px;color:#fff;border-radius: 50%;text-align: center;line-height: 60px;font-size: 30px;background-color:#72D6B3;}
 .wrap-operate .minus-gds{background-color:#F13C62;font-size: 40px;}
 .wrap-operate .add-gds{font-size: 40px;}
