--- a/senguo.cc/admin/templates/m-admin/user-search.html
+++ b/senguo.cc/admin/templates/m-admin/user-search.html
@@ -19,63 +19,42 @@
     <div class="boxs order-list-box">
         <div class="goods-item item">
             <ul class="order-lists user-lists pt10" id="user-all-list">
-                <li>
-                    <a href="javascript:;" class="goods-goods-edit">
-                        <div class="goods-row">
-                            <dl class="gdl udl">
-                                <dt>
-                                    <img class="cur-goods-img" src="/static/images/TDSG.png" alt="用户头像"/>
-                                </dt>
-                                <dd>
-                                    <i class="more"></i>
-                                    <p class="clip">
-                                        <span class="user-name f14 c333 bold">李易峰</span>
-                                        <span class="sex-mark man-mark"></span>
-                                        <span class="user-mark f12 c666 clip">李易峰研制超高啊</span>
-                                    </p>
-                                    <p class="c333 mt4 f12 bold user-balance">余额 25.00元</p>
-                                    <p class="mt4 c999 clip">
-                                        <span class="mr10">用户积分 10分</span>
-                                        <span>用户ID 6652</span>
-                                    </p>
-                                </dd>
-                            </dl>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="goods-goods-edit">
-                        <div class="goods-row">
-                            <dl class="gdl udl">
-                                <dt>
-                                    <img class="cur-goods-img" src="/static/m-admin/img/sender_holder.png" alt="用户头像"/>
-                                </dt>
-                                <dd>
-                                    <i class="more"></i>
-                                    <p class="clip">
-                                        <span class="user-name f14 c333 bold">李易峰</span>
-                                        <span class="sex-mark woman-mark"></span>
-                                        <span class="user-mark f12 c666 clip">李易峰研制超高啊</span>
-                                    </p>
-                                    <p class="c333 mt4 f12 bold user-balance">余额 25.00元</p>
-                                    <p class="mt4 c999 clip">
-                                        <span class="mr10">用户积分 10分</span>
-                                        <span>用户ID 6652</span>
-                                    </p>
-                                </dd>
-                            </dl>
-                        </div>
-                    </a>
-                </li>
+
             </ul>
         </div>
-        <div class="no-result hide">页面加载中...</div>
+    <div class="no-result"></div>
     </div>
 </div>
 </div>
+<ul class="hide" id="user_item">
+    <li>
+        <a href="javascript:;" class="user-link">
+            <div class="goods-row">
+                <dl class="gdl udl">
+                    <dt>
+                        <img class="cur-user-img" src="/static/m-admin/img/sender_holder.png" alt="用户头像"/>
+                    </dt>
+                    <dd>
+                        <i class="more"></i>
+                        <p class="clip">
+                            <span class="user-name f14 c333 bold"></span>
+                            <span class="sex-mark man-mark"></span>
+                            <span class="user-mark f12 c666 clip"></span>
+                        </p>
+                        <p class="c333 mt4 f12 bold user-balance">余额 <span class="ubalance"></span>元</p>
+                        <p class="mt4 c999 clip">
+                            <span class="mr10">用户积分 <span class="upoint"></span>分</span>
+                            <span>用户ID <span class="uid"></span></span>
+                        </p>
+                    </dd>
+                </dl>
+            </div>
+        </a>
+    </li>
+</ul>
 {% end %}
 {% block fix %}
 {% end %}
 {% block bottom %}
-<script src="{{static_url('m-admin/js/goods-search.js')}}"></script>
+<script src="{{static_url('m-admin/js/user-search.js')}}"></script>
 {% end %}
