--- a/senguo.cc/admin/templates/m-admin/shop-profile.html
+++ b/senguo.cc/admin/templates/m-admin/shop-profile.html
@@ -121,7 +121,7 @@
                 <span class="box-icon data-staff">员工管理</span>
             </p>
         </a>
-        <a href="javascript:;"  class="developing">
+        <a href="/madmin/user">
             <p class="box-title btf5">
                 <span class="more fr">&nbsp;</span>
                 <span class="fr c000">{{shop.fans_count}}</span>
