--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -137,7 +137,7 @@
 .clip{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
 .i-cert{position: absolute;width: 0;height: 0;border: 5px solid transparent;border-top-color: #666;top: 18px;right: 8px;}
 .bingo-list{margin: 10px 8px;}
-.bingo-list>li{border: 1px solid #63C5A2;border-radius: 6px;margin-bottom: 10px;position:relative;}
+.bingo-list>li{border:1px solid rgba(99,197,162,.6);border-radius: 6px;margin-bottom: 10px;position:relative;}
 .goods-img-box{min-height: 130px;max-height: 160px;overflow: hidden;position: relative;}
 .goods-img-box img{width: 100%;min-height: 130px;border-top-left-radius: 6px;border-top-right-radius: 6px;-webkit-user-select:none;}
 .status-tip{position:absolute;width:45px;height:45px;top:15px;left:15px;background-size: 45px;background-repeat: no-repeat;background-position:center center;}
@@ -160,7 +160,7 @@
 .e4{color: #ee413e;}
 .rmb{position: relative;display: inline-block;top: -6px;}
 .wrap-operate{position: absolute;bottom: 23px;right: 6px;width: 60px;z-index:20;}
-.wrap-operate .roll-btn{display: inline-block;width: 60px;height: 60px;margin-top:10px;color:#fff;border-radius: 50%;text-align: center;line-height: 55px;font-size: 30px;background-color:#72D6B3;}
+.wrap-operate .roll-btn{display: inline-block;width: 60px;height: 60px;margin-top:10px;color:#fff;border-radius: 50%;text-align: center;line-height: 60px;font-size: 30px;background-color:#72D6B3;}
 .wrap-operate .minus-gds{background-color:#F13C62;font-size: 40px;}
 .wrap-operate .add-gds{font-size: 40px;}
 .wrap-bug-text{position: absolute;bottom:-12px;right: 6px;padding-right: 6px;white-space:nowrap;}
