--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -171,6 +171,7 @@
 .tab-group>li{float: left;background-color:#fff;position:relative;border-right:1px solid #ddd;-webkit-box-sizing:border-box;cursor: pointer;width: 33.33%;height: 40px;color: #333;line-height: 40px;text-align: center;white-space: nowrap;overflow:hidden;text-overflow: ellipsis;font-size: 16px;}
 .tab-group>li:last-child{border-right:none;border-top-right-radius: 6px;border-bottom-right-radius: 6px;overflow:visible;}
 .tab-group>li:first-child{border-top-left-radius: 6px;border-bottom-left-radius: 6px;}
+.tab-group .only-one{width:100%;}
 .tab-group .active{background-color: #63C5A2;color: #fff;}
 .tab-group .active .i-cert{border-top-color: #fff;}
 .more-group{position: absolute;top: 100%;left: -1px;width: 100%;max-height: 200px;overflow: hidden;overflow-y: auto;-webkit-overflow-scrolling:touch;background-color: #63C5A2;z-index:999;}
