--- a/senguo.cc/admin/templates/customer/goods-detail.html
+++ b/senguo.cc/admin/templates/customer/goods-detail.html
@@ -28,7 +28,7 @@
         <div class="pagination"></div>
     </div>
     <div class="wrap-goods-info">
-        <p class="goods-title">{{good.name or ''}}</p>
+        <p class="goods-title">{{good.name or ''}}<span class="goods-tag"></span></p>
         <p class="goods-info">{{good.intro or ''}}</p>
         <p class="goods-num">
             <span id="dianzan" data-flag="{{good.favour_today}}" data-id="{{good.id}}"><span class="zan {% if good.favour_today %}zaned{% end %}"></span><span class="num">{{good.favour or 0}}</span></span>
