--- a/senguo.cc/admin/templates/m-admin/shop-set-template.html
+++ b/senguo.cc/admin/templates/m-admin/shop-set-template.html
@@ -54,7 +54,7 @@
 </div>
 {% end %}
 {% block fix %}
-<div class="pop-bwin pop-tpl hide">
+<div class="pop-bwin pop-tpl hide pop-tpl-bg">
     <div class="tpl-phone-img">
         <img class="tpl-big-img" src="/static/images/tpl-0.png" alt="森果模版"/>
     </div>
