--- a/senguo.cc/admin/templates/bingo/home.html
+++ b/senguo.cc/admin/templates/bingo/home.html
@@ -101,7 +101,7 @@
 <ul class="hidden" id="goods_item">
     <li class="goods_item_item">
         <div class="goods-img-box">
-            <img class="goods_img lazy_img" src="/static/images/holder_fruit.jpg" alt="水果图片" data-original=""/>
+            <img class="goods_img lazy_img" src="/static/images/holder_fruit.png" alt="水果图片" data-original=""/>
             <div class="goods-img-hover"></div>
             <div class="status-tip"></div>
         </div>
