--- a/senguo.cc/admin/static/css/market-goods.css
+++ b/senguo.cc/admin/static/css/market-goods.css
@@ -96,6 +96,6 @@ table{width: 100%;border-collapse: collapse;table-layout: fixed;}
 .comment-lst .com-top>img{width: 20px;height: 20px;border-radius: 50%;margin-right: 2px;margin-top: -2px;}
 .comment-lst .name{color: #333;font-size: 14px;}
 .comment-lst .com-txt{font-size: 14px;line-height: 18px;color: #999;}
-
+.goods-tag{display: inline-block;font-size: 12px;color: #fec306;width: 60px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-left: 4px;border: 1px solid #fec306;}
 .market-price{text-decoration:line-through;}
 .goods-info-lst{padding-bottom:50px;}
