--- a/senguo.cc/admin/templates/admin/shop-template-set.html
+++ b/senguo.cc/admin/templates/admin/shop-template-set.html
@@ -32,10 +32,10 @@
 			<div class="view-box pull-right mr10"><img src="/static/images/tpl-2.png" class="view-img" alt="预览"></div>
 			<a href="javascript:;" class="pull-left choose-btn mr10"  data-id="2"></a>
 			<span class="pull-left mr20">森果商城模板三</span>
-			<span class="pull-left text-grey2">森果商城模板三。<br>
+			<span class="pull-left text-grey2">简约大气，操作简单，开启大图+疯卖模式，买买买停不下来！<br>
 				<span class="text-pink">
-					森果商城模板三<br>
-					森果商城模板三<br>
+					建议上传的商品图片宽高比例为5 : 3，以达到最佳显示效果。例如：<br>
+					若图片宽度为800像素，则高度应为480像素（即大小为 800 * 480 的图片）<br>
 				</span>
 			</span>
 		</li>
