--- a/senguo.cc/admin/templates/m-admin/shop-set-template.html
+++ b/senguo.cc/admin/templates/m-admin/shop-set-template.html
@@ -42,7 +42,7 @@
                 <img src="/static/images/tpl-2.png" alt="商城模版一"/>
                 <div class="tpl-img-info">
                     <p class="">森果商城模板三</p>
-                    <p class="mt4 f12">大图，美观，对上传的图片要求比较高。<br><span class="dgreen">(建议上传的商品图片宽高比例为5:3，若图片宽度为800像素，则高度应为480像素)</span></p>
+                    <p class="mt4 f12">简约大气，操作简单，开启大图+疯卖模式，买买买停不下来！<br><span class="dgreen">(建议上传的商品图片宽高比例为5:3，若图片宽度为800像素，则高度应为480像素)</span></p>
                 </div>
             </div>
             <div class="wrap-tpl-btns">
