in regist html add some

--- a/senguo.cc/admin/templates/login/m_register.html
+++ b/senguo.cc/admin/templates/login/m_register.html
@@ -38,10 +38,10 @@
 	<hr/>
 	<p class="text-grayb1 text-center tit">其它登录方式</p>
 	<ul class="regist_login center-block clearfix mt10">
-		<li><a href="#" class="weixin_login login_btn"></a></li>
-		<li><a href="#" class="qq_login login_btn"></a></li>
-		<li><a href="#" class="alipay_login login_btn"></a></li>
-		<li><a href="#" class="weibo_login login_btn"></a></li>
+		<li><a href="{{reverse_url('customerWeixin')}}" class="weixin_login login_btn"></a></li>
+		<li><a href="#" class="qq_login login_btn will-open"></a></li>
+		<li><a href="#" class="alipay_login login_btn will-open"></a></li>
+		<li><a href="#" class="weibo_login login_btn will-open"></a></li>
 	</ul>
 </div>
 {% end %}
