--- a/senguo.cc/admin/templates/m-admin/user-detail.html
+++ b/senguo.cc/admin/templates/m-admin/user-detail.html
@@ -90,7 +90,7 @@
         {% for key in data['shops']%}
         <li>
             <div class="us-item clip">
-                <img src="{{key[1] or '/static/images/TDSG.png'}}" alt="{{key[0]}}"/>
+                <img src="{{key[1] or '/static/images/TDSG.png'}}?imageView2/1/w/50/h/50" alt="{{key[0]}}"/>
                 <span class="c666">{{key[0]}}</span>
             </div>
         </li>
