--- a/senguo.cc/admin/templates/m-admin/user-detail.html
+++ b/senguo.cc/admin/templates/m-admin/user-detail.html
@@ -12,7 +12,7 @@
     <div class="user-top">
         <div class="wrap-user-img txt-center">
             <span class="img-border">
-                <img src="{{data['headimgurl'] or '/static/m-admin/img/sender_holder.png'}}?imageView2/1/w/120/h/120" alt="用户头像"/>
+                <img src="{{data['headimgurl'] or '/static/m-admin/img/sender_holder.png'}}" alt="用户头像"/>
             </span>
         </div>
         <p class="mt6 txt-center"><span class="cfff bold">{{data['nickname']}}</span><i class="sex-mark ml4 {% if data['sex'] ==1 %}m-sex{% else %}w-sex{% end %}"></i></p>
