--- a/senguo.cc/admin/static/css/admin-marketing.css
+++ b/senguo.cc/admin/static/css/admin-marketing.css
@@ -112,6 +112,23 @@ tr{border-left:1px solid #eee;border-right:1px solid #eee;border-bottom:1px soli
 .mt20{margin-top: 20px !important;}
 .mt50{margin-top: 50px;}
 .pull-left{float: left !important;}
-.mt10{margin-top: 10px;}
-.ml{margin-left: 10px;}
+.pull-right{float: right !important;}
+.mt10{margin-top: 10px !important;}
+.ml10{margin-left: 10px;}
+.ml20{margin-left: 20px !important;}
+.input-width{width: 40px !important;}
+.seckill-new-div{margin-top: 10px;margin-right: 50px;margin-bottom: 0px;padding: 15px;background-color:#FFF;}
+.mb30{margin-bottom: 30px !important;}
+.w130{width: 130px !important;}
+.scroll-bar{overflow: hidden;max-height: 1500px;overflow-y: auto;}
+
+.add-link{float:left !important;color:#33CC66;margin-bottom: 10px;font-size: 18px;margin-top: 15px;}
+.delete-link{float: right !important;color:#ff0000;margin-right: 50px;margin-bottom: 10px;font-size: 18px;margin-top: 15px;}
+
+.send-day .btn{padding:5px 10px;font-size:12px;margin-right:5px;}
+.send-day .active{background:#44b549;color:#fff;border: none;}
+
+.ver-8 {vertical-align: 8px;}
+.w110{width: 110px;}
+
 /**/
