--- a/senguo.cc/admin/templates/bingo/home.html
+++ b/senguo.cc/admin/templates/bingo/home.html
@@ -137,6 +137,7 @@
 {% end %}
 {% block bottom %}
 <script src="/static/js/third/idangerous.swiper.min.js"></script>
+<script src="/static/js/third/iscroll-probe.min.js"></script>
 <script src="{{static_url('js/market-bingo.js')}}"></script>
 {% end %}
 
